--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   "dependencies": {
     "@types/node": "^14.14.17",
     "@types/react": "^17.0.0",
+    "autoprefixer": "^10.1.0",
     "next": "10.0.4",
+    "postcss": "^8.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "tailwindcss": "^2.0.2",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
